[gd_scene load_steps=9 format=3 uid="uid://bg8ol536vorl7"]

[ext_resource type="Theme" uid="uid://bllt7k6sjj8bi" path="res://themes/menu_theme.tres" id="1_nsafy"]
[ext_resource type="Script" path="res://ui/victory_menu.gd" id="2_vs5eg"]
[ext_resource type="FontFile" uid="uid://iseqpbc8ays2" path="res://fonts/SueEllenFrancisco-Regular.ttf" id="3_muk7x"]

[sub_resource type="Animation" id="Animation_1lg6h"]
resource_name = "dismiss"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_j6ym2"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jtltj"]
_data = {
"dismiss": SubResource("Animation_1lg6h"),
"show": SubResource("Animation_j6ym2")
}

[sub_resource type="LabelSettings" id="LabelSettings_uaq20"]
font = ExtResource("3_muk7x")
font_size = 72
font_color = Color(0, 0, 0, 0.96)

[sub_resource type="LabelSettings" id="LabelSettings_rno3r"]
font = ExtResource("3_muk7x")
font_size = 32
font_color = Color(0, 0, 0, 0.96)

[node name="VictoryMenu" type="PanelContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nsafy")
script = ExtResource("2_vs5eg")

[node name="UIAnimations" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_jtltj")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(640, 640)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "You win!"
label_settings = SubResource("LabelSettings_uaq20")
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Completed in 00:00:00"
label_settings = SubResource("LabelSettings_rno3r")
vertical_alignment = 1

[node name="TitleGap2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TryAgainButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Play again"

[node name="QuitToMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit to menu"

[node name="SpaceBottom" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
